CB-25652: Create component test for distrox upgrade candidate retrieval